@@ -23,7 +23,7 @@ dnl Set the name of the config header file...
 AC_CONFIG_HEADER(config.h)
 
 dnl Version number...
-VERSION=2.3
+VERSION=2.3.1
 AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(MXML_VERSION, "Mini-XML v$VERSION")
 
@@ -93,6 +93,9 @@ case "$uname" in
 esac
 
 AC_SUBST(ARFLAGS)
+
+dnl Inline functions...
+AC_C_INLINE
 
 dnl Checks for string functions.
 if test "x$use_ansi" != xyes; then
